--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/StreamGageHowTo.jpg" />
     <link
       rel="stylesheet"
       href="https://cdn.leafletjs.com/leaflet/v1.7.1/leaflet.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>StreamflowMonitor</title>
   </head>
   <body>
     <div id="root"></div>
